--- a/MS Vertex Selection.ipynb
+++ b/MS Vertex Selection.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9fc8992",
+   "id": "336992ad",
    "metadata": {},
    "source": [
     "## Preselection"
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "6dc2de77",
+   "id": "4b0e23ed",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "022c4c59",
+   "id": "4df5f998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "3e3660df",
+   "id": "41e3413b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "0454b68e",
+   "id": "03c4eb56",
    "metadata": {
     "scrolled": true
    },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aeb8202",
+   "id": "c629245d",
    "metadata": {},
    "source": [
     "### 669 events pass preselection"
@@ -571,11 +571,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "34020016",
+   "execution_count": 284,
+   "id": "e6c61bae",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Now Figure out how many good MS verts acually pass preselection\n",
     "barrel_pass = goodMSvert_barrel & preselection\n",
     "endcap_pass = goodMSvert_endcap & preselection"
    ]
@@ -583,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "bcdc259f",
+   "id": "a5efe586",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "123493ce",
+   "id": "23849cb6",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53beeec1",
+   "id": "b75b18ca",
    "metadata": {},
    "source": [
     "### We have 105 events in barrel and 99 in endcap that contain good vertices and pass preselection before isolation"
@@ -639,18 +640,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "dc5a3aea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Do I need these????? Would eliminate events significantly\n",
-    "trig400 = sig_file['pass_HLT_j400'].array()\n",
-    "trig420 = sig_file['pass_HLT_j420'].array()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2f0abed5",
    "metadata": {},
@@ -661,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "a4b7c075",
+   "id": "5b7b2cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "493ce40f",
+   "id": "f0a11dcb",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "9013df4c",
+   "id": "4b417f2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "5435d06b",
+   "id": "2fc6fe15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "8e21fe8a",
+   "id": "eea5cb6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "21cf4711",
+   "id": "d67fd3a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "af6da9ce",
+   "id": "3bca2a93",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e957e907",
+   "id": "83a14bf7",
    "metadata": {},
    "source": [
     "#### We have some punch through jets in the endcap so need to check if these correspond with any good verticies"
@@ -781,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "094e2f63",
+   "id": "5d59d692",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "7a3e940d",
+   "id": "410a5c13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "c148566c",
+   "id": "8d79285a",
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "id": "e113198a",
+   "id": "77ed5a0f",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1fd8f49",
+   "id": "1d2043b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "19c2642c",
+   "id": "2a6d9f5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "d439c6d7",
+   "id": "6509eec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "15d8ee0f",
+   "id": "7c6b7057",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "8ab01120",
+   "id": "26bea6aa",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bef3b53c",
+   "id": "e2588f70",
    "metadata": {},
    "source": [
     "### Our number of good vertices in the endcap decreased from 99 to 40"
@@ -943,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34b48f1",
+   "id": "a346fe7d",
    "metadata": {},
    "source": [
     "### We still need to account for track isolation then we are finished"
@@ -952,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7819c796",
+   "id": "574c73a2",
    "metadata": {},
    "outputs": [],
    "source": []
